--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="lib/bitcoinjs.js"></script>
     <script type="text/javascript" src="multisig/multisig.js"></script>
+    <script type="text/javascript" src="multisig/sjlc-bip39.js"></script>
+    <script type="text/javascript" src="multisig/bip39.js"></script>
+    <script type="text/javascript" src="multisig/wordlist_english.js"></script>
     <script type="text/javascript">
       "use strict";
 
@@ -87,7 +90,7 @@
             seeds: {
               shared: cleanInput($('.shared .key').val()),
               shared_password: $('.shared .password').val(),
-              user: cleanInput($('.user .key').val())
+              user: $('.user .key').val().trim()
             },
             // BIP38 decryption progress method.
             onProgress1: function(percent) {
@@ -135,18 +138,15 @@
         </header>
         <div class="xpubkeys">
           <p>Please enter the extended public keysfor your wallet.</p>
-          <p>Your Public Key (Key #1)</p>
+          <p>The public key generated in the browser (Key #1)</p>
           
-          <textarea id="xpubkey1" class="xpubkey key" style="width: 90%" placeholder="xpub...">xpub661MyMwAqRbcGbHQE3MmP67WPXLvLLWKSahfE7u9jm3CdU7PWBnSCGyeh1FD7NQ27CTWRRAzvtnTG7ChEBv8DTchpLyFZy4NCg9Qe91td83</textarea>
-          <p>Your Backup Public Key (Key #2)</p>
-          <textarea id="xpubkey2" class="xpubkey key" style="width: 90%" placeholder="xpub...">xpub661MyMwAqRbcG79b8ibaRpVorfiJbc5yQf1sz1pbKeMAZhX9UnoExKdffo5U3URtYcViutVAV6Hm1wAMygekKAQK3UPLSZbuWXaQpbtTBKt</textarea>
-          <p>Your providers Key (Key #3)</p>
-          <textarea id="xpubkey3" class="xpubkey key" style="width: 90%" placeholder="xpub...">xpub661MyMwAqRbcGbnj2QkdikWA44PeUPs8eHXNk5Ywf7nFv2WgbiNTQZQhcp5brAnwYbaTcvYeW5rof5G58z8eBDV5BNKohJCQKzahjcTptnt</textarea>
+          <textarea id="xpubkey1" class="xpubkey key" style="width: 90%" placeholder="xpub...">xpub661MyMwAqRbcGXuqr8Lmmcm3XjJvj27EDLDNKVWDhe3S3CPGymKyvXrVehF5wWGMUQoJ9NUbdtFJi4gxKw3QzTf1TDQnWH2Ydn3ahStve2D</textarea>
+          <p>Your Public SmartPhone Key (Key #2)</p>
+          <textarea id="xpubkey2" class="xpubkey key" style="width: 90%" placeholder="xpub...">xpub67wqP6Ua22JvhPmN8KUE2CdtKzzdvsuQTXGSDZjsZQPUnJuKa6fgQoSbs2bDaadH3agMVBjriynGKLU4hEkLkLcRrUyGVCTJQkRx6Vs6MhJ</textarea>
 
         </div>
         <div class="max_index">
-          <p>Please enter the highest HD index to check for balance.</p>
-          <input id="max_index" type="number" placeholder="index" value="10">
+          <input type="hidden" id="max_index" type="number" placeholder="index" value="10">
         </div>
         <footer>
           <button>Continue</button>
@@ -169,18 +169,16 @@
 			<br />
             <small class="decrypt_progress">Decrypting ... <strong><span id="decrypt_percent">0</span>%</strong></small>
 			<br />
-          <textarea id="shared_seed" style="width: 90%" class="key">6PRM1sAkLs71m8MqAvoxdGck95iSBnWMN5mZmpomPdRSazUhiLE3Pk9RPL</textarea>
+          <textarea id="shared_seed" style="width: 90%" class="key">6PYU9bDUYWbT4Bexqv3DKEmUkskXgYP3EVffdnTKKKnhVQbybvZSe5BXWz</textarea>
 			<br />
-          <input type="password" class="password" value="swirl work everybody breathe approach rather" placeholder="Enter your vault password">
+          <input type="password" class="password" style="width: 90%" value="" placeholder="Enter your CarbonWallet passphrase">
 
         </div>
+		<br />
         <div class="user">
-          <label>Your Backup Encrypted Private Key(BIP38 Format)
+          <label>Your SmartPhone BIP39 Seed i.e. (battery horse staple ...)
 		 </label>
-			<br />
-            <small class="decrypt_progress2">Decrypting ... <strong><span id="decrypt_percent2">0</span>%</strong></small>
-			<br />
-          <textarea id="user_seed" style="width: 90%" class="key">6PRWLctRAowdiiCR6Zto71EYpiBm5aWSUW8M5Ju7va6sqi6jJCbRVkNrUa</textarea>
+          <textarea id="user_seed" style="width: 90%" class="key"></textarea>
 
         </div>
         <div class="destination_address">
