--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
           <p>Please enter the extended public keysfor your wallet.</p>
           <p>The public key generated in the browser (Key #1)</p>
           
-          <textarea id="xpubkey1" class="xpubkey key" style="width: 90%" placeholder="xpub...">xpub661MyMwAqRbcGXuqr8Lmmcm3XjJvj27EDLDNKVWDhe3S3CPGymKyvXrVehF5wWGMUQoJ9NUbdtFJi4gxKw3QzTf1TDQnWH2Ydn3ahStve2D</textarea>
+          <textarea id="xpubkey1" class="xpubkey key" style="width: 90%" placeholder="xpub661MyMwAqRbcGXuqr8Lmmcm3XjJvj27EDLDNKVWDhe3S3CPGymKyvXrVehF5wWGMUQoJ9NUbdtFJi4gxKw3QzTf1TDQnWH2Ydn3ahStve2D"></textarea>
           <p>Your Public SmartPhone Key (Key #2)</p>
-          <textarea id="xpubkey2" class="xpubkey key" style="width: 90%" placeholder="xpub...">xpub67wqP6Ua22JvhPmN8KUE2CdtKzzdvsuQTXGSDZjsZQPUnJuKa6fgQoSbs2bDaadH3agMVBjriynGKLU4hEkLkLcRrUyGVCTJQkRx6Vs6MhJ</textarea>
+          <textarea id="xpubkey2" class="xpubkey key" style="width: 90%" placeholder="xpub67wqP6Ua22JvhPmN8KUE2CdtKzzdvsuQTXGSDZjsZQPUnJuKa6fgQoSbs2bDaadH3agMVBjriynGKLU4hEkLkLcRrUyGVCTJQkRx6Vs6MhJ"></textarea>
 
         </div>
         <div class="max_index">
@@ -169,7 +169,7 @@
 			<br />
             <small class="decrypt_progress">Decrypting ... <strong><span id="decrypt_percent">0</span>%</strong></small>
 			<br />
-          <textarea id="shared_seed" style="width: 90%" class="key">6PYU9bDUYWbT4Bexqv3DKEmUkskXgYP3EVffdnTKKKnhVQbybvZSe5BXWz</textarea>
+          <textarea id="shared_seed" style="width: 90%" class="key" placeholder="6PYU9bDUYWbT4Bexqv3DKEmUkskXgYP3EVffdnTKKKnhVQbybvZSe5BXWz"></textarea>
 			<br />
           <input type="password" class="password" style="width: 90%" value="" placeholder="Enter your CarbonWallet passphrase">
 
